modificacion en el campus

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#">HOME</a></li>
             <li><a href="#">Videos</a></li>
             <li><a href="#">Curriculum</a></li>
-            <li class="ctn"><a href="#">Contact</a></li>
+            <li><a href="#" class="ctn">Contact</a></li>       
         </ul>
     </nav>
 <header>
@@ -27,5 +27,8 @@
         <a href="#" class="ctn">About Me</a>
     </div>
 </header>
+<section>
+    <a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a> 
+</section>
 </body>
 </html>
