--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 <!--NAVEGATION-->
     <nav class="navbar">
-        <h1 class="logo">SKATEBOARD</h1>
+        <h1 class="logo">CCskatemedia</h1>
         <ul class="nav-list">
             <li><a href="#">HOME</a></li>
             <li><a href="#">Videos</a></li>
             <li><a href="#">Curriculum</a></li>
-            <li><a href="#" class="ctn">Contact</a></li>       
+            <li><a href="#" class="ctn">Contact me</a></li>       
         </ul>
     </nav>
 <header>
@@ -27,8 +27,58 @@
         <a href="#" class="ctn">About Me</a>
     </div>
 </header>
-<section>
-    <a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a> 
-</section>
+<main>
+    <section class="galeria">
+        <div class="box-img">
+            <a href="#">
+                <figure>
+                    <img src="img/nelson-modelo.jpg" alt="modelando" title="SOF Coleccion">
+                </figure>
+            </a>
+        </div>
+        <div class="box-img">
+            <a href="#">
+                <figure>
+                    <img src="img/nelson-modelo2.jpg" alt="modelando" title="VagosLatinamerica Coleccion">
+                </figure>
+            </a>
+        </div>
+        <div class="box-img">
+            <a href="#">
+                <figure>
+                    <img src="img/nelson-ollie.jpg" alt="patinando" title="Ollie Volando">
+                </figure>
+            </a>
+        </div>
+        <div class="box-img">
+            <a href="#">
+                <figure>
+                    <img src="img/nelson_bs_tail.jpg" alt="truco_skate" title="Bs Tailslide">
+                </figure>
+            </a>
+        </div>
+        <div class="box-img">
+            <a href="#">
+                <figure>
+                    <img src="img/amigos.jpeg" alt="tren_amigos" title="Viajando">
+                </figure>
+            </a>
+        </div>
+        <div class="box-img">
+            <a href="#">
+                <figure>
+                    <img src="img/grabando1.jpeg" alt="grabando-skate" title="Shoot all skaters">
+                </figure>
+            </a>
+        </div>
+        <div class="box-img">
+            <a href="#">
+                <figure>
+                    <img src="img/grabando2.jpeg" alt="grabando-skate2" title="Shoot all skaters">
+                </figure>
+            </a>
+        </div>
+    </section>
+</main>
 </body>
 </html>
