scale y transform logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <!--NAVEGATION-->
     <nav class="navbar">
-        <h1 class="logo">CCskatemedia</h1>
+        <p class="logo">CCskatemedia</p>
         <ul class="nav-list">
             <li><a href="#">HOME</a></li>
             <li><a href="#">Videos</a></li>
