agregando section media

--- a/index.html
+++ b/index.html
@@ -1,84 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css">
     <title>Nelson Camargo Portafolio</title>
+    <script src="https://kit.fontawesome.com/5b186684cb.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-<!--NAVEGATION-->
+    <!--NAVEGATION-->
     <nav class="navbar">
         <p class="logo">CCskatemedia</p>
         <ul class="nav-list">
             <li><a href="#">HOME</a></li>
-            <li><a href="#">Videos</a></li>
-            <li><a href="#">Curriculum</a></li>
-            <li><a href="#" class="ctn">Contact me</a></li>       
+            <li><a href="#">MEDIA</a></li>
+            <li><a href="#">CURRICULUM</a></li>
+            <li><a href="#" class="ctn">Contact</a></li>
         </ul>
     </nav>
-<header>
-    <div class="header-content">
-        <h2>Explore My Wonderful World</h2>
-        <div class="line"></div>
-        <h1>A SKATEBOADING LIFE </h1>
-        <a href="#" class="ctn">About Me</a>
-    </div>
-</header>
-<main>
-    <section class="galeria">
-        <div class="box-img">
-            <a href="#">
-                <figure>
-                    <img src="img/nelson-modelo.jpg" alt="modelando" title="SOF Coleccion">
-                </figure>
-            </a>
+    <header>
+        <div class="header-content">
+            <h2>Explore My Wonderful World</h2>
+            <div class="line"></div>
+            <h1>A SKATEBOADING LIFE </h1>
+            <a href="#" class="ctn">About Me</a>
         </div>
-        <div class="box-img">
-            <a href="#">
-                <figure>
-                    <img src="img/nelson-modelo2.jpg" alt="modelando" title="VagosLatinamerica Coleccion">
-                </figure>
-            </a>
-        </div>
-        <div class="box-img">
-            <a href="#">
-                <figure>
-                    <img src="img/nelson-ollie.jpg" alt="patinando" title="Ollie Volando">
-                </figure>
-            </a>
-        </div>
-        <div class="box-img">
-            <a href="#">
-                <figure>
-                    <img src="img/nelson_bs_tail.jpg" alt="truco_skate" title="Bs Tailslide">
-                </figure>
-            </a>
-        </div>
-        <div class="box-img">
-            <a href="#">
-                <figure>
-                    <img src="img/amigos.jpeg" alt="tren_amigos" title="Viajando">
-                </figure>
-            </a>
-        </div>
-        <div class="box-img">
-            <a href="#">
-                <figure>
-                    <img src="img/grabando1.jpeg" alt="grabando-skate" title="Shoot all skaters">
-                </figure>
-            </a>
-        </div>
-        <div class="box-img">
-            <a href="#">
-                <figure>
-                    <img src="img/grabando2.jpeg" alt="grabando-skate2" title="Shoot all skaters">
-                </figure>
-            </a>
-        </div>
-    </section>
-</main>
+    </header>
+    <main>
+        <section class="galeria">
+            <div class="box-img">
+                <a href="#">
+                    <figure>
+                        <img src="img/nelson-modelo.jpg" alt="modelando" title="SOF Coleccion">
+                    </figure>
+                </a>
+            </div>
+            <div class="box-img">
+                <a href="#">
+                    <figure>
+                        <img src="img/nelson-modelo2.jpg" alt="modelando" title="VagosLatinamerica Coleccion">
+                    </figure>
+                </a>
+            </div>
+            <div class="box-img">
+                <a href="#">
+                    <figure>
+                        <img src="img/nelson-ollie.jpg" alt="patinando" title="Ollie Volando">
+                    </figure>
+                </a>
+            </div>
+            <div class="box-img">
+                <a href="#">
+                    <figure>
+                        <img src="img/nelson_bs_tail.jpg" alt="truco_skate" title="Bs Tailslide">
+                    </figure>
+                </a>
+            </div>
+            <div class="box-img">
+                <a href="#">
+                    <figure>
+                        <img src="img/amigos.jpeg" alt="tren_amigos" title="Viajando">
+                    </figure>
+                </a>
+            </div>
+            <div class="box-img">
+                <a href="#">
+                    <figure>
+                        <img src="img/grabando1.jpeg" alt="grabando-skate" title="Shoot all skaters">
+                    </figure>
+                </a>
+            </div>
+            <div class="box-img">
+                <a href="#">
+                    <figure>
+                        <img src="img/grabando2.jpeg" alt="grabando-skate2" title="Shoot all skaters">
+                    </figure>
+                </a>
+            </div>
+        </section>
+        <section class="media">
+            <article class="article-media">
+                <iframe class="video-media" src="https://www.youtube.com/embed/dGEr83pbEhE" title="Costa Rica Dream"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+                <div class="media-content">
+                    <h2 class="h2-media">LIFE MEMORIES</h2>
+                    <p class="p-media">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate vel sint,
+                        voluptatum consequatur
+                        maxime ea expedita eum voluptas debitis dicta ipsam in. Dolor tempora perferendis sit enim vel
+                        repellendus ab.
+                    </p>
+                </div>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <div></div>
+    </footer>
 </body>
+
 </html>
