--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!--NAVEGATION-->
-    <nav class="navbar">
+    <nav class="navbar nav-about">
         <a href="https://www.youtube.com/channel/UCq_Af1jVv6xeFbE4qmKaoAw" target="_blank">
         <p class="logo">CCskatemedia</p>
         </a>      
@@ -28,7 +28,7 @@
             <h2>Explore My Wonderful World</h2>
             <div class="line"></div>
             <h1>A SKATEBOADING LIFE </h1>
-            <a href="#" class="ctn">About Me</a>
+            <a href="aboutme.html" class="ctn">About Me</a>
         </div>
     </header>
     <main>
