style2 css agregado

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,33 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style2.css" />
   </head>
+
   <body>
-    <nav class="navbar nav-about">
-      <a
-        href="https://www.youtube.com/channel/UCq_Af1jVv6xeFbE4qmKaoAw"
-        target="_blank"
-        ><p class="logo">CCskatemedia</p>
-      </a>
-      <ul class="nav-list">
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="#">MEDIA</a></li>
-        <li><a href="#">CURRICULUM</a></li>
-        <li><a href="#" class="ctn">Contact</a></li>
-      </ul>
-    </nav>
     <main class="main-about">
       <div class="figure-about">
-        <div class="row">
-            <div class="column">
-              <img src="" alt="">              
-              <img src="" alt="">
-              <img src="" alt="">
-              <img src="" alt="">
-            </div>
-            
-        </div>
+        <img src="img/G0012670.JPG" alt="" />
       </div>
       <div class="article-about">
         <h1>Hello! i'm Nelson.</h1>
@@ -58,7 +38,7 @@
           atque maxime et odio quae aperiam ullam ipsum tenetur similique,
           numquam aspernatur natus assumenda, vitae repellat nam quod commodi
           illo amet. Dolorum nesciunt veritatis nostrum. Ea.
-        </p>
+        </p>   
       </div>
     </main>
   </body>
