style2 css agregado segunda parte

--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,11 @@
           atque maxime et odio quae aperiam ullam ipsum tenetur similique,
           numquam aspernatur natus assumenda, vitae repellat nam quod commodi
           illo amet. Dolorum nesciunt veritatis nostrum. Ea.
-        </p>   
+        </p>
+        <div class="buttons">
+          <p><a href="#">Contact Me</a></p>
+          <p><a href="index.html">Back to home</a></p>
+        </div>
       </div>
     </main>
   </body>
