--- a/aboutme.html
+++ b/aboutme.html
@@ -40,8 +40,8 @@
           illo amet. Dolorum nesciunt veritatis nostrum. Ea.
         </p>
         <div class="buttons">
-          <p><a href="#">Contact Me</a></p>
-          <p><a href="index.html">Back to home</a></p>
+          <p><a href="/#button1">Contact Me</a></p>
+          <p><a href="/">Back to home</a></p>
         </div>
       </div>
     </main>
