new section main & new botton about

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       </a>
       <ul class="nav-list">
         <li><a href="#">HOME</a></li>
-        <li><a href="#">MEDIA</a></li>
-        <li><a href="#">CURRICULUM</a></li>
+        <li><a href="#adventure">Adventure</a></li>
+        <li><a href="project.html">Projects</a></li>
         <li><a href="#button1" class="ctn">Contact</a></li>
       </ul>
     </nav>
@@ -33,10 +33,15 @@
         <h2>Explore My Wonderful World</h2>
         <div class="line"></div>
         <h1>A SKATEBOADING LIFE</h1>
-        <a href="aboutme.html" class="ctn">About Me</a>
+        <a href="aboutme.html" class="about">About Me</a>
       </div>
     </header>
     <main>
+      <section class="adventure" id="adventure">
+        <H2 class="h2_adventure">LIFE IS AN ADVENTURE</H2>
+        <div class="line2"></div>
+        <h3 class="h3_adventure">NEVER STOP LEARNING</h3>
+      </section>
       <section class="galeria">
         <div class="box-img">
           <a href="#">
@@ -124,6 +129,7 @@
                 voluptas debitis dicta ipsam in. Dolor tempora perferendis sit
                 enim vel repellendus ab.
               </p>
+              <a href="aboutme.html" class="about">About Me</a>
         </div>
       </section>
     </main>
