--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
     <link rel="stylesheet" href="style2.css" />
+    <script src="https://kit.fontawesome.com/5b186684cb.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
