cambio de posicion de secciones

--- a/aboutme.html
+++ b/aboutme.html
@@ -41,8 +41,8 @@
           illo amet. Dolorum nesciunt veritatis nostrum. Ea.
         </p>
         <div class="buttons">
-          <p><a href="/#button1">Contact Me</a></p>
-          <p><a href="/">Back to home</a></p>
+          <p class="back-button"><a href="/#button1">Contact Me</a></p>
+          <p class="back-button"><a href="/">Back to home</a></p>
         </div>
       </div>
     </main>
