--- a/index.html
+++ b/index.html
@@ -33,10 +33,25 @@
       </div>
     </header>
     <main>
-      <section class="adventure" id="adventure">
-        <H2 class="h2_adventure">LIFE IS AN ADVENTURE</H2>
+      <H2 class="h2_learning">NEVER STOP LEARNING</H2>
         <div class="line2"></div>
-        <h3 class="h3_adventure">NEVER STOP LEARNING</h3>
+      <section class="cnc_router">
+        <div class="cnc_media">
+            <img src="img/G0012670.JPG" alt="CNC ROUTER">
+        </div>          
+        <div class="cnc_work">
+            <h2 class="h2_cnc">CNC Operator</h2>
+            <p class="p_cnc">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate vel sint, voluptatum consequatur maxime ea expedita eum
+                voluptas debitis dicta ipsam in. Dolor tempora perferendis sit
+                enim vel repellendus ab.
+              </p>
+              <a href="aboutme.html" class="about">About Me</a>
+        </div>
+      </section>      
+      <section class="adventure" id="adventure">        
+        <h3 class="h3_adventure">LIFE IS AN ADVENTURE</h3>
       </section>
       <section class="galeria">
         <div class="box-img">
@@ -113,21 +128,7 @@
           </a>
         </div>
       </section>
-      <section class="cnc_router">
-        <div class="cnc_media">
-            <img src="img/G0012670.JPG" alt="CNC ROUTER">
-        </div>          
-        <div class="cnc_work">
-            <h2 class="h2_cnc">CNC Operator</h2>
-            <p class="p_cnc">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptate vel sint, voluptatum consequatur maxime ea expedita eum
-                voluptas debitis dicta ipsam in. Dolor tempora perferendis sit
-                enim vel repellendus ab.
-              </p>
-              <a href="aboutme.html" class="about">About Me</a>
-        </div>
-      </section>
+      
     </main>
     <div class="letswork">
         <h2>LET'S WORK</h2>
