creando seccion projects

--- a/project.html
+++ b/project.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="vid/style3.css">
+    <link rel="stylesheet" href="style3.css">    
 </head>
 <body>
-    
+    <!--NAVEGATION-->
+    <nav class="navbar">
+        <a href="https://www.youtube.com/channel/UCq_Af1jVv6xeFbE4qmKaoAw" class="logo" target="_blank">CCskatemedia
+        </a>
+        <ul class="nav-list">
+          <li><a href="/">HOME</a></li>
+          <li><a href="/#adventure">Adventure</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="/#button1" class="ctn">Contact</a></li>
+        </ul>      
+      </nav>
+      <img src="img/menu_button.png" alt="menubtn" class="menu_btn">
+      <!-- HEADER -->
+    <section class="header">
+        <figure>
+            <img src="img/Madrid-Street.jpg" alt="sol_madrid">
+        </figure>
+    </section>
 </body>
 </html>
