creando seccion projects parte2

--- a/project.html
+++ b/project.html
@@ -21,10 +21,11 @@
       </nav>
       <img src="img/menu_button.png" alt="menubtn" class="menu_btn">
       <!-- HEADER -->
-    <section class="header">
-        <figure>
-            <img src="img/Madrid-Street.jpg" alt="sol_madrid">
-        </figure>
-    </section>
+      <header>
+        <div class="header-content">
+          <h1>PROJECTS</h1>
+          <div class="line"></div>          
+        </div>
+      </header>
 </body>
 </html>
