galery added, cnc description, proyect added

--- a/index.html
+++ b/index.html
@@ -1,166 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <title>Nelson Camargo Portafolio</title>
-    
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE-edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>Nelson Camargo Portafolio</title>
 
-    <!--NAVEGATION-->
+</head>
 
-    <nav class="navbar">
-      <a href="https://www.youtube.com/channel/UCq_Af1jVv6xeFbE4qmKaoAw" class="logo" target="_blank">CCskatemedia
-      </a>
-      <ul class="nav-list">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#adventure">Adventure</a></li>
-        <li><a href="project.html">Projects</a></li>
-        <li><a href="#button1" class="ctn">Contact</a></li>
-      </ul>      
-    </nav>
-    <img src="img/menu_button.png" alt="menubtn" class="menu_btn">
-    <header>
-      <div class="header-content">
-        <h2>Explore My Wonderful World</h2>
-        <div class="line"></div>
-        <h1>A SKATEBOADING LIFE</h1>
+<body>
+
+  <!--NAVEGATION-->
+
+  <nav class="navbar">
+    <a href="https://www.youtube.com/channel/UCq_Af1jVv6xeFbE4qmKaoAw" class="logo" target="_blank">CCskatemedia
+    </a>
+    <ul class="nav-list">
+      <li><a href="#">HOME</a></li>
+      <li><a href="#adventure">Adventure</a></li>
+      <li><a href="project.html">Projects</a></li>
+      <li><a href="#button1" class="ctn">Contact</a></li>
+    </ul>
+  </nav>
+  <img src="img/menu_button.png" alt="menubtn" class="menu_btn">
+  <header>
+    <div class="header-content">
+      <h2>Explore My Wonderful World</h2>
+      <div class="line"></div>
+      <h1>A SKATEBOADING LIFE</h1>
+      <a href="aboutme.html" class="about">About Me</a>
+    </div>
+  </header>
+  <main>
+    <H2 class="h2_learning">NEVER STOP LEARNING</H2>
+    <div class="line2"></div>
+    <section class="cnc_router">
+      <div class="cnc_media">
+        <img src="img/nelson_cnc.JPG" alt="CNC ROUTER">
+      </div>
+      <div class="cnc_work">
+        <h2 class="h2_cnc">CNC Operator</h2>
+        <p class="p_cnc">
+          The essential role of a CNC operator is to set up and operate CNC machines and equipment. On any given day, an
+          operator
+          may unload raw materials, prepare a test run to ensure a machine is working properly and inspect and measure
+          finished
+          products to ensure they meet requirements. <br><br>
+          To be successful in this role, operators must have the following traits:
+        </p>
+        <article>
+          <ul>
+            <li>A keen eye for detail</li>
+            <li>Mechanical aptitude</li>
+            <li>The ability to perform mathematical calculations</li>
+            <li>Basic understanding of computer programming and CAD/CAM software</li>
+            <li>Ability to comply with safety guidelines</li>
+            <li>Strong problem-solving and multi-tasking skills</li>
+          </ul>
+        </article>
         <a href="aboutme.html" class="about">About Me</a>
       </div>
-    </header>
-    <main>
-      <H2 class="h2_learning">NEVER STOP LEARNING</H2>
-        <div class="line2"></div>
-      <section class="cnc_router">
-        <div class="cnc_media">
-            <img src="img/G0012670.JPG" alt="CNC ROUTER">
-        </div>          
-        <div class="cnc_work">
-            <h2 class="h2_cnc">CNC Operator</h2>
-            <p class="p_cnc">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptate vel sint, voluptatum consequatur maxime ea expedita eum
-                voluptas debitis dicta ipsam in. Dolor tempora perferendis sit
-                enim vel repellendus ab.
-              </p>
-              <a href="aboutme.html" class="about">About Me</a>
-        </div>
-      </section>      
-      <section class="adventure" id="adventure">        
-        <h3 class="h3_adventure">LIFE IS AN ADVENTURE</h3>
-      </section>
-      <section class="galeria">
-        <div class="box-img">
-          <a href="#">
-            <figure>
-              <img
-                src="img/nelson-modelo.jpg"
-                alt="modelando"
-                title="SOF Coleccion"
-              />
-            </figure>
-          </a>
-        </div>
-        <div class="box-img">
-          <a href="#">
-            <figure>
-              <img
-                src="img/nelson-modelo2.jpg"
-                alt="modelando"
-                title="VagosLatinamerica Coleccion"
-              />
-            </figure>
-          </a>
-        </div>
-        <div class="box-img">
-          <a href="#">
-            <figure>
-              <img
-                src="img/nelson-ollie.jpg"
-                alt="patinando"
-                title="Ollie Volando"
-              />
-            </figure>
-          </a>
-        </div>
-        <div class="box-img">
-          <a href="#">
-            <figure>
-              <img
-                src="img/nelson_bs_tail.jpg"
-                alt="truco_skate"
-                title="Bs Tailslide"
-              />
-            </figure>
-          </a>
-        </div>
-        <div class="box-img">
-          <a href="#">
-            <figure>
-              <img src="img/amigos.jpeg" alt="tren_amigos" title="Viajando" />
-            </figure>
-          </a>
-        </div>
-        <div class="box-img">
-          <a href="#">
-            <figure>
-              <img
-                src="img/grabando1.jpeg"
-                alt="grabando-skate"
-                title="Shoot all skaters"
-              />
-            </figure>
-          </a>
-        </div>
-        <div class="box-img">
-          <a href="#">
-            <figure>
-              <img
-                src="img/grabando2.jpeg"
-                alt="grabando-skate2"
-                title="Shoot all skaters"
-              />
-            </figure>
-          </a>
-        </div>
-      </section>      
-    </main>
-    <div class="letswork">
-        <h2>LET'S WORK</h2>
-        <h3>TOGETHER</h3>
-        <div class="line3"></div>
+    </section>
+    <section class="adventure" id="adventure">
+      <h3 class="h3_adventure">LIFE IS AN ADVENTURE</h3>
+    </section>
+    <section class="galeria">
+      <div class="box-img">
+        <a href="galery.html">
+          <figure>
+            <img src="img/nelson-modelo.jpg" alt="modelando" title="SOF Coleccion" />
+          </figure>
+        </a>
       </div>
-    <footer>      
-        <div class="mapa">
-          <a href="img/mapa.png" target="_blank"><img class="mapaimg"src="img/mapa.png" alt="mapa"></a>
-          <address>
-            Moratalaz, Calle Camino de los Vinateros, Madrid 28030. <br>
-            <a href="https://goo.gl/maps/gQuKpmWxXEhFkFXPA" class="linkmapa"target="_blank">Google Maps</a>
-          </address>
-        </div>   
-        <div class="box-form">
-            <form action="">
-              <input type="text" placeholder="Full Name" required/>                  
-              <input type="text" placeholder="Email" required/>          
-              <input type="num" placeholder="Phone Number" required/>
-              <textarea name="Mensaje" placeholder="I'd really like to hear from you!" cols="15" rows="5"></textarea>
-              <input type="submit" class="button1" id="button1" value="ENVIAR" />
-            </form>
-          </div>     
+      <div class="box-img">
+        <a href="galery.html">
+          <figure>
+            <img src="img/nelson-modelo2.jpg" alt="modelando" title="VagosLatinamerica Coleccion" />
+          </figure>
+        </a>
       </div>
-    </footer>
+      <div class="box-img">
+        <a href="galery.html">
+          <figure>
+            <img src="img/nelson-ollie.jpg" alt="patinando" title="Ollie Volando" />
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="galery.html">
+          <figure>
+            <img src="img/nelson_bs_tail.jpg" alt="truco_skate" title="Bs Tailslide" />
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="galery.html">
+          <figure>
+            <img src="img/amigos.jpeg" alt="tren_amigos" title="Viajando" />
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="galery.html">
+          <figure>
+            <img src="img/grabando1.jpeg" alt="grabando-skate" title="Shoot all skaters" />
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="galery.html">
+          <figure>
+            <img src="img/grabando2.jpeg" alt="grabando-skate2" title="Shoot all skaters" />
+          </figure>
+        </a>
+      </div>
+    </section>
+  </main>
+  <div class="letswork">
+    <h2>LET'S WORK</h2>
+    <h3>TOGETHER</h3>
+    <div class="line3"></div>
+  </div>
+  <footer>
+    <div class="mapa">
+      <a href="img/mapa.png" target="_blank"><img class="mapaimg" src="img/mapa.png" alt="mapa"></a>
+      <address>
+        Moratalaz, Calle Camino de los Vinateros, Madrid 28030. <br>
+        <a href="https://goo.gl/maps/gQuKpmWxXEhFkFXPA" class="linkmapa" target="_blank">Google Maps</a>
+      </address>
+    </div>
+    <div class="box-form">
+      <form action="">
+        <input type="text" placeholder="Full Name" required />
+        <input type="text" placeholder="Email" required />
+        <input type="num" placeholder="Phone Number" required />
+        <textarea name="Mensaje" placeholder="I'd really like to hear from you!" cols="15" rows="5"></textarea>
+        <input type="submit" class="button1" id="button1" value="ENVIAR" />
+      </form>
+    </div>
+    </div>
+  </footer>
 
-    <script>
-      const menuBtn = document.querySelector('.menu_btn');
-      const navBar = document.querySelector('.navbar');
+  <script>
+    const menuBtn = document.querySelector('.menu_btn');
+    const navBar = document.querySelector('.navbar');
 
-      menuBtn.addEventListener('click', ()=>{
-        navBar.classList.toggle('mobile_menu')
-      })
-    </script>
-  </body>
+    menuBtn.addEventListener('click', () => {
+      navBar.classList.toggle('mobile_menu')
+    })
+  </script>
+</body>
+
 </html>
