--- a/project.html
+++ b/project.html
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-    <link rel="stylesheet" href="style3.css">    
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projects</title>
+  <link rel="stylesheet" href="style3.css">
 </head>
+
 <body>
-    <!--NAVEGATION-->
-    <nav class="navbar">
-        <a href="https://www.youtube.com/channel/UCq_Af1jVv6xeFbE4qmKaoAw" class="logo" target="_blank">CCskatemedia
-        </a>
-        <ul class="nav-list">
-          <li><a href="/">HOME</a></li>
-          <li><a href="/#adventure">Adventure</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="/#button1" class="ctn">Contact</a></li>
-        </ul>      
-      </nav>
-      <img src="img/menu_button.png" alt="menubtn" class="menu_btn">
-      <!-- HEADER -->
-      <header>
-        <div class="header-content">
-          <h1>PROJECTS</h1>
-          <div class="line"></div>          
+  <!--NAVEGATION-->
+  <nav class="navbar">
+    <a href="https://www.youtube.com/channel/UCq_Af1jVv6xeFbE4qmKaoAw" class="logo" target="_blank">CCskatemedia
+    </a>
+    <ul class="nav-list">
+      <li><a href="/">HOME</a></li>
+      <li><a href="/#adventure">Adventure</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="/#button1" class="ctn">Contact</a></li>
+    </ul>
+  </nav>
+  <img src="img/menu_button.png" alt="menubtn" class="menu_btn">
+  <!-- HEADER -->
+  <header>
+    <div class="header-content">
+      <div>
+        <img src="img/project-icon-29161.png" alt="project icon">
+      </div>
+      <h1>PROJECTS</h1>
+      <div class="line"></div>
+    </div>
+  </header>
+  <main>
+    <a href="">
+      <div class="project-content">
+        <div class="img-content">
+          <img src="" alt="">
         </div>
-      </header>
+        <div></div>
+      </div>
+    </a>
+    <a href="">
+      <div class="project-content">
+        <div class="img-content">
+          <img src="" alt="">
+        </div>
+        <div></div>
+      </div>
+    </a>
+    <a href="">
+      <div class="project-content">
+        <div class="img-content">
+          <img src="" alt="">
+        </div>
+        <div></div>
+      </div>
+    </a>
+    <a href="">
+      <div class="project-content">
+        <div class="img-content">
+          <img src="" alt="">
+        </div>
+        <div></div>
+      </div>
+    </a>
+  </main>
 </body>
+
 </html>
