linear gradient y correccion de font-size

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="img/nelson_cnc.JPG" alt="CNC ROUTER">
       </div>
       <div class="cnc_work">
-        <h2 class="h2_cnc">CNC Operator</h2>
+        <h2 class="h2_cnc">CNC <strong>OPERATOR</strong></h2>
         <p class="p_cnc">
           The essential role of a CNC operator is to set up and operate CNC machines and equipment. On any given day, an
           operator
@@ -64,7 +64,7 @@
       </div>
     </section>
     <section class="adventure" id="adventure">
-      <h3 class="h3_adventure">LIFE IS AN ADVENTURE</h3>
+      <h3 class="h3_adventure">LIFE IS AN <span>ADVENTURE</span></h3>
     </section>
     <section class="galeria">
       <div class="box-img">
